<resources>
    <string name="app_name" translatable="false">EventFinder</string>
    <string name="free">free</string>

    <string name="price_normal">normal</string>
    <string name="price_student">student</string>
    <string name="price_adult">adult</string>
    <string name="price_retired">retired</string>

    <string name="et_other">Other</string>
    <string name="et_automotive">Automotive</string>
    <string name="et_festival">Festival</string>
    <string name="et_gastro">Gastro</string>
    <string name="et_kids">Kids</string>
    <string name="et_tradition">Tradition</string>
    <string name="et_exhibiton">Exhibition</string>
    <string name="et_culture">Culture</string>
    <string name="et_sight">Sight</string>
    <string name="et_cinema">Cinema</string>
    <string name="et_sport">Sport</string>
    <string name="et_outdoor">Outdoor</string>
    <string name="et_theatre">Theatre</string>
    <string name="et_music">Music</string>
    <string name="et_museum">Museum</string>
    <string name="et_concert">Concert</string>
    <string name="title_activity_main" translatable="false">EventFinder</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_events">Events</string>
    <string name="nav_search">Search</string>
    <string name="nav_calendar">Calendar</string>
    <string name="nav_map">Map</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_info">About</string>
    <string name="location">Location:</string>
    <string name="start">Start:</string>
    <string name="end">End: </string>
    <string name="fee">Fee: </string>
    <string name="not_available">N/A</string>

    <string name="settings_types">Types</string>
    <string name="settings_distance">Distance</string>

    <string name="settings_filter">Filter settings</string>
    <string name="alert_empty_type">Please select at least one type</string>

    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme">Theme</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="details">Details</string>
    <string name="welcome_text">Please select the search range and the types of events which you are interested in. You can always modify this in the Settings.</string>
    <string name="search_filter_national">National</string>
    <string name="action_search">Search</string>
    <string name="event_refresh">Refreshing events</string>
    <string name="please_wait">Please wait</string>
    <string name="no_connection">No connection available</string>
    <string name="retry">Retry</string>
    <string name="string_some_thing_wrong">something wrong</string>
    <string name="action_save">save</string>
    <string name="action_forget">event_forget</string>

</resources>
