<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="Name"
        android:textColor="@color/textPrimary"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txtLocationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtName"
        android:text="@string/location"
        android:textColor="@color/textSecondary"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtStartLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtLocation"
        android:text="@string/start"
        android:textColor="@color/textSecondary"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txtLocationLabel"
        android:layout_toEndOf="@+id/txtLocationLabel"
        android:layout_toRightOf="@+id/txtLocationLabel"
        android:inputType="textMultiLine"
        android:text="location"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/textSecondary"
        android:layout_marginLeft="6dp" />

    <TextView
        android:id="@+id/txtStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txtStartLabel"
        android:layout_toEndOf="@+id/txtStartLabel"
        android:layout_toRightOf="@+id/txtStartLabel"
        android:text="2016.07.22 16:00"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/textSecondary"
        android:layout_marginLeft="6dp" />

    <TextView
        android:id="@+id/txtEndLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtStartLabel"
        android:text="@string/end"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/textSecondary" />

    <TextView
        android:id="@+id/txtEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2016.07.23 20:00"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/textSecondary"
        android:layout_below="@+id/txtStart"
        android:layout_alignLeft="@+id/txtStart"
        android:layout_alignStart="@+id/txtStart" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/textSecondary"
        android:text="@string/details"
        android:id="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="italic"
        android:layout_below="@+id/txtEndLabel" />

</RelativeLayout>